@@ -89,6 +89,7 @@ requests from users, including:
   Phil Smith
   Matthew Soldner
   Corey Sparks
+  Ingmar Sturm
   Terry Therneau
   Takahiro Tsuchiya
   Richard Valliant
